--- a/.env.example
+++ b/.env.example
@@ -32,10 +32,12 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
+AWS_ACCESS_KEY_ID=AKIAYVNRSZHJZJTTGJ56
+AWS_SECRET_ACCESS_KEY=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
+AWS_DEFAULT_REGION=ap-south-1
+AWS_BUCKET=storagebucketdemo
+AWS_URL= https://storagebucketdemo.s3-ap-south-1.amazonaws.com
+
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
